# LearnGL

./: CMakeLists.txt  GPATH  GRTAGS  GTAGS
Dependencies/: glfw3.lib
Dependencies/glad/: glad.h
include/: camera3D.h  myheader.h  objectClass.h  shaderClass.h  stb_image.h  textureLoad.h
src/: CMakeLists.txt  basicGL.cpp  camera3D.cpp  cubeTextureGL.cpp  frameBufferGL.cpp  geomshaderGL.cpp  glad.c  instanceGL.cpp  lightingGL.cpp  loadassimpGL.cpp  objectClass.cpp  shaderClass.cpp  textureLoad.cpp
src/shader/: basicTextureShader.frag  basicTextureShader.vert  geom.geom  instance.frag  instance.vert  lightingShader.frag  lightingShader.vert  modelShader.frag  reflect_refract.frag  reflect_refract.vert  skyboxShader.frag  skyboxShader.vert  unit.frag  unit.vert
texture/skybox1/: Blood Stain Gorge.txt  mp_bloodgorge.shader
